--- a/app/src/main/res/layout/activity_add_city_new.xml
+++ b/app/src/main/res/layout/activity_add_city_new.xml
@@ -49,7 +49,7 @@
 					android:background="@drawable/background_info_window"
 					android:contentDescription="@string/current_weather"
 					android:layout_marginBottom="@dimen/editor_icon_margin"
-					android:layout_marginTop="24dp"
+					android:layout_marginTop="@dimen/editor_icon_margin"
 					app:layout_constraintBottom_toBottomOf="parent"
 					app:layout_constraintEnd_toEndOf="parent"
 					app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +94,7 @@
 				android:maxLength="50"
 				android:nextFocusLeft="@id/editorNameEdit"
 				android:nextFocusUp="@id/editorNameEdit"
-				android:padding="10dp"
+				android:padding="@dimen/edit_text_padding"
 				app:layout_constraintEnd_toEndOf="parent"
 				app:layout_constraintStart_toStartOf="parent"
 				app:layout_constraintTop_toBottomOf="@+id/editorNameText"/>
@@ -158,8 +158,7 @@
 				android:layout_marginStart="@dimen/margin_small"
 				android:text="@string/wind_placeholder"
 				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/pressureSeekBar"
-				tools:layout_editor_absoluteY="331dp"/>
+				app:layout_constraintTop_toBottomOf="@id/pressureSeekBar"/>
 			<TextView
 				android:id="@+id/editorWindMinText"
 				android:layout_width="wrap_content"
@@ -301,8 +300,7 @@
 				android:layout_marginStart="@dimen/margin_small"
 				android:text="@string/pressure_placeholder"
 				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toBottomOf="@id/temperatureSeekBar"
-				tools:layout_editor_absoluteY="523dp"/>
+				app:layout_constraintTop_toBottomOf="@id/temperatureSeekBar"/>
 			<TextView
 				android:id="@+id/editorPressureMinText"
 				android:layout_width="wrap_content"
