--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -4,7 +4,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 	<androidx.recyclerview.widget.RecyclerView
-		android:id="@+id/cities_recycler_view"
+		android:id="@+id/citiesRecyclerView"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:scrollbars="vertical"/>
