--- a/app/src/main/res/drawable/background_choose_icon.xml
+++ b/app/src/main/res/drawable/background_choose_icon.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android"
-	android:enterFadeDuration="@android:integer/config_shortAnimTime"
-	android:exitFadeDuration="@android:integer/config_shortAnimTime">
-	<item android:drawable="@drawable/background_info_window"
-		android:state_pressed="true"/>
-	<item android:state_pressed="false">
-		<shape android:shape="rectangle">
-			<solid android:color="#eee"/>
-			<corners android:radius="@dimen/padding"/>
-		</shape>
-	</item>
+<selector xmlns:android="http://schemas.android.com/apk/res/android" android:enterFadeDuration="@android:integer/config_shortAnimTime" android:exitFadeDuration="@android:integer/config_shortAnimTime">
+    <item android:drawable="@drawable/background_info_window" android:state_pressed="true" />
+    <item android:state_pressed="false">
+        <shape android:shape="rectangle">
+            <solid android:color="#eee" />
+            <corners android:radius="@dimen/padding" />
+        </shape>
+    </item>
 </selector>
