--- a/app/src/main/res/drawable/background_title.xml
+++ b/app/src/main/res/drawable/background_title.xml
@@ -1,27 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android"
-	android:exitFadeDuration="300"
-	android:enterFadeDuration="300">
-	<item android:state_selected="false">
-		<layer-list>
-			<item>
-				<shape android:shape="rectangle">
-					<solid android:color="#ddd"/>
-				</shape>
-			</item>
-			<item android:bottom="3dp">
-				<shape android:shape="rectangle">
-					<solid android:color="@android:color/white"/>
-				</shape>
-			</item>
-		</layer-list>
-	</item>
-	<item android:state_selected="true">
-		<shape android:shape="rectangle">
-			<gradient android:angle="-90"
-				android:startColor="#ccc"
-				android:centerColor="@android:color/white"
-				android:endColor="#ccc"/>
-		</shape>
-	</item>
+<selector xmlns:android="http://schemas.android.com/apk/res/android" android:enterFadeDuration="300" android:exitFadeDuration="300">
+    <item android:state_selected="false">
+        <layer-list>
+            <item>
+                <shape android:shape="rectangle">
+                    <solid android:color="#ddd" />
+                </shape>
+            </item>
+            <item android:bottom="3dp">
+                <shape android:shape="rectangle">
+                    <solid android:color="@android:color/white" />
+                </shape>
+            </item>
+        </layer-list>
+    </item>
+    <item android:state_selected="true">
+        <shape android:shape="rectangle">
+            <gradient android:angle="-90" android:centerColor="@android:color/white" android:endColor="#ccc" android:startColor="#ccc" />
+        </shape>
+    </item>
 </selector>
