--- a/app/src/main/res/drawable/ic_edit_pen_button.xml
+++ b/app/src/main/res/drawable/ic_edit_pen_button.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-	<item>
-		<shape android:shape="oval">
-			<gradient
-				android:centerColor="#000"
-				android:endColor="#00000000"
-				android:gradientRadius="28dp"
-				android:startColor="#000"
-				android:type="radial"/>
-			<padding android:bottom="4dp"
-				android:left="4dp"
-				android:right="4dp"
-				android:top="4dp"/>
-		</shape>
-	</item>
-	<item>
-		<shape android:shape="oval">
-			<solid android:color="@android:color/white"/>
-		</shape>
-	</item>
-	<item android:bottom="5dp"
-		android:drawable="@drawable/ic_edit_pen_black"
-		android:left="5dp"
-		android:right="5dp"
-		android:top="5dp"/>
+    <item>
+        <shape android:shape="oval">
+            <gradient
+                android:centerColor="#000"
+                android:endColor="#00000000"
+                android:gradientRadius="28dp"
+                android:startColor="#000"
+                android:type="radial" />
+            <padding
+                android:bottom="4dp"
+                android:left="4dp"
+                android:right="4dp"
+                android:top="4dp" />
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="@android:color/white" />
+        </shape>
+    </item>
+    <item
+        android:bottom="5dp"
+        android:drawable="@drawable/ic_edit_pen_black"
+        android:left="5dp"
+        android:right="5dp"
+        android:top="5dp" />
 </layer-list>
