--- a/app/src/main/res/drawable/seek_bar_thumb.xml
+++ b/app/src/main/res/drawable/seek_bar_thumb.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-	android:shape="oval">
-	<size android:height="@dimen/seek_bar_thumb"
-		android:width="@dimen/seek_bar_thumb"/>
-	<solid android:color="#888"/>
+    android:shape="oval">
+    <size
+        android:width="@dimen/seek_bar_thumb"
+        android:height="@dimen/seek_bar_thumb" />
+    <solid android:color="#888" />
 </shape>
