--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent">
-	<androidx.recyclerview.widget.RecyclerView
-		android:id="@+id/citiesRecyclerView"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:scrollbars="vertical"/>
-	<TextView
-		android:id="@+id/citiesNotFound"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_gravity="center"
-		android:text="@string/list_empty"
-		android:textSize="@dimen/large_text_size"
-		android:visibility="gone"/>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/citiesRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical" />
+
+    <TextView
+        android:id="@+id/citiesNotFound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/list_empty"
+        android:textSize="@dimen/large_text_size"
+        android:visibility="gone" />
 </FrameLayout>
