--- a/app/src/main/res/layout/item_row_city.xml
+++ b/app/src/main/res/layout/item_row_city.xml
@@ -1,75 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="wrap_content">
-	<TextView
-		android:id="@+id/cityDetailTitle"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:background="@drawable/background_title"
-		android:ellipsize="end"
-		android:maxLines="1"
-		android:padding="@dimen/padding"
-		android:textColor="@color/cityNameColor"
-		android:textSize="@dimen/list_item_title_size"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		tools:text="Ростов-на-Дону"/>
-	<androidx.constraintlayout.widget.ConstraintLayout
-		android:id="@+id/cityDetail"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:background="@color/colorPrimary"
-		android:padding="@dimen/padding"
-		android:visibility="gone"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/cityDetailTitle">
-		<TextView
-			android:id="@+id/cityDetailTemperature"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:drawableEnd="@drawable/weather_icon_01"
-			android:drawableRight="@drawable/weather_icon_01"
-			android:gravity="center_vertical"
-			android:layout_gravity="center_vertical"
-			android:textColor="@android:color/white"
-			android:textSize="@dimen/large_text_size"
-			android:textStyle="bold"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintTop_toTopOf="parent"
-			tools:text="+15"/>
-		<LinearLayout
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:orientation="vertical"
-			app:layout_constraintEnd_toStartOf="@id/cityDetailTemperature"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent">
-			<TextView
-				android:id="@+id/cityDetailWind"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:padding="0dp"
-				style="@style/CityDropDownInfo"
-				tools:text="Ветер: 8 м/с"/>
-			<TextView
-				android:id="@+id/cityDetailCloudy"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				style="@style/CityDropDownInfo"
-				tools:text="Облачность: 40%"/>
-			<TextView
-				android:id="@+id/cityDetailPressure"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				style="@style/CityDropDownInfo"
-				tools:text="Давление: 760 мм"/>
-		</LinearLayout>
-	</androidx.constraintlayout.widget.ConstraintLayout>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/cityDetailTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/background_title"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:padding="@dimen/padding"
+        android:textColor="@color/cityNameColor"
+        android:textSize="@dimen/list_item_title_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Ростов-на-Дону" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cityDetail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:padding="@dimen/padding"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/cityDetailTitle">
+
+        <TextView
+            android:id="@+id/cityDetailTemperature"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:drawableEnd="@drawable/weather_icon_01"
+            android:drawableRight="@drawable/weather_icon_01"
+            android:gravity="center_vertical"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/large_text_size"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="+15" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintEnd_toStartOf="@id/cityDetailTemperature"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:id="@+id/cityDetailWind"
+                style="@style/CityDropDownInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="0dp"
+                tools:text="Ветер: 8 м/с" />
+
+            <TextView
+                android:id="@+id/cityDetailCloudy"
+                style="@style/CityDropDownInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Облачность: 40%" />
+
+            <TextView
+                android:id="@+id/cityDetailPressure"
+                style="@style/CityDropDownInfo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="Давление: 760 мм" />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
