--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,20 +1,6 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
-
-    <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="TabTextAppearance" parent="TextAppearance.AppCompat">
-        <item name="android:textAllCaps">false</item>
-        <item name="android:textColor">@color/tabUnselectedTextColor</item>
-    </style>
+    <style name="AppTheme" parent="Theme.Material3.DayNight.NoActionBar" />
 
     <style name="CityDropDownInfo">
         <item name="android:textColor">@android:color/white</item>
