--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="space_medium">8dp</dimen>
     <dimen name="space_big">16dp</dimen>
     <dimen name="padding">16dp</dimen>
     <dimen name="padding_small">8dp</dimen>
