--- a/app/src/main/res/layout/fragment_city_detail.xml
+++ b/app/src/main/res/layout/fragment_city_detail.xml
@@ -10,6 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:navigationIcon="@drawable/ic_arrow_back_round_24"
         tools:title="City name" />
 
     <LinearLayout
