Update InfoWindow style

--- a/app/src/main/res/drawable/ic_marker_city_selected.xml
+++ b/app/src/main/res/drawable/ic_marker_city_selected.xml
@@ -17,7 +17,7 @@
             <size
                 android:width="@dimen/marker_size_selected"
                 android:height="@dimen/marker_size_selected" />
-            <solid android:color="#7fbd32" />
+            <solid android:color="@color/cityMarker" />
         </shape>
     </item>
 </layer-list>
