--- a/app/src/main/res/layout/info_window_weather.xml
+++ b/app/src/main/res/layout/info_window_weather.xml
@@ -1,34 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/background_info_window"
-    android:minWidth="@dimen/info_window_min_width"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingHorizontal="@dimen/space_medium"
+    android:paddingVertical="@dimen/space_medium">
 
     <TextView
         android:id="@+id/infoWindowTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/weather_icon_01"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:maxLength="25"
-        android:paddingLeft="@dimen/padding_small"
-        android:paddingTop="@dimen/padding_small"
-        android:paddingRight="@dimen/padding_small"
-        android:textSize="@dimen/info_window_city_text_size"
-        android:textStyle="bold"
-        tools:text="Ростов-на-Дону" />
+        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
+        app:drawableStartCompat="@drawable/weather_icon_01"
+        tools:text="@tools:sample/cities" />
 
     <TextView
         android:id="@+id/infoWindowSnippet"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/padding_small"
-        android:paddingRight="@dimen/padding_small"
-        android:paddingBottom="@dimen/padding_small"
-        tools:text="Детали погоды" />
+        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
+        tools:text="@tools:sample/lorem[10]" />
 
 </LinearLayout>
