--- a/app/src/main/res/drawable/background_info_window.xml
+++ b/app/src/main/res/drawable/background_info_window.xml
@@ -5,5 +5,5 @@
     <stroke
         android:width="1dp"
         android:color="#e2e2e2" />
-    <corners android:radius="@dimen/padding" />
+    <corners android:radius="16dp" />
 </shape>
