#11 Simplify padding setting

--- a/app/src/main/res/layout/info_window_weather.xml
+++ b/app/src/main/res/layout/info_window_weather.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/background_info_window"
     android:orientation="vertical"
-    android:paddingHorizontal="@dimen/space_medium"
-    android:paddingVertical="@dimen/space_medium">
+    android:padding="@dimen/space_medium">
 
     <TextView
         android:id="@+id/infoWindowTitle"
