--- a/app/src/main/res/layout/fragment_city_details.xml
+++ b/app/src/main/res/layout/fragment_city_details.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".feature.city_details.CityDetailFragment">
+    tools:context=".feature.city_details.CityDetailsFragment">
 
     <Toolbar
         android:id="@+id/toolbar"
