#10 Add Toolbar with back button on the CitiesList screen
* Navigate to the root screen if the cities list is empty (after process death).

--- a/app/src/main/res/layout/item_row_city.xml
+++ b/app/src/main/res/layout/item_row_city.xml
@@ -16,7 +16,7 @@
         android:layout_marginHorizontal="@dimen/space_medium"
         android:layout_weight="1"
         android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
-        tools:text="Ростов-на-Дону" />
+        tools:text="@tools:sample/cities" />
 
     <TextView
         android:id="@+id/cityDetailTemperature"
