--- a/app/src/main/res/layout/fragment_city_details.xml
+++ b/app/src/main/res/layout/fragment_city_details.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".feature.city_details.CityDetailsFragment">
 
-    <Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:navigationIcon="@drawable/ic_arrow_back_round_24"
+        app:navigationIcon="@drawable/ic_arrow_back_round_24"
+        app:navigationIconTint="?colorOnSurface"
         tools:title="City name" />
 
     <LinearLayout
