--- a/module/feature/map/src/main/res/layout/fragment_map.xml
+++ b/module/feature/map/src/main/res/layout/fragment_map.xml
@@ -20,8 +20,8 @@
             android:id="@+id/btnShowListOfCities"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/space_medium"
-            android:layout_marginVertical="@dimen/space_big"
+            android:layout_marginHorizontal="8dp"
+            android:layout_marginVertical="16dp"
             android:text="@string/map_btn_show_in_list"
             app:icon="@drawable/ic_view_list_round_24" />
 
@@ -29,8 +29,8 @@
             android:id="@+id/btnRequestLocation"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/space_big"
-            android:layout_marginEnd="@dimen/space_big"
+            android:layout_marginVertical="16dp"
+            android:layout_marginEnd="16dp"
             android:contentDescription="@string/cd_request_weather_at_user_location"
             app:srcCompat="@drawable/ic_location_on" />
 
