--- a/module/feature/map/src/main/res/layout/info_window_weather.xml
+++ b/module/feature/map/src/main/res/layout/info_window_weather.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/background_info_window"
     android:orientation="vertical"
-    android:padding="@dimen/space_medium">
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/infoWindowTitle"
