Support Edge-to-Edge

--- a/module/feature/map/src/main/res/layout/fragment_map.xml
+++ b/module/feature/map/src/main/res/layout/fragment_map.xml
@@ -10,7 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <View
+        android:id="@+id/mapStatusBarScrim"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:alpha="0.5"
+        android:background="?colorSurface"
+        tools:layout_height="24dp" />
+
     <LinearLayout
+        android:id="@+id/mapButtonsContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
